<resources>
    <string name="app_name" translatable="false">Beproffer</string>
    <string name="app_name_low_case" translatable="false">beproffer</string>
    <string name="app_version" translatable="false">v 0.9.3</string>
    <string name="app_all_rights_reserved" translatable="false">Copyright 2019 "Beproffer" LLC. All rights reserved.</string>
    <string name="name_infield">name</string>
    <string name="email_infield" translatable="false">email</string>
    <string name="password_infield">password</string>
    <string name="password_repeat_infield">repeat password</string>
    <string name="phone_infield">phone number</string>
    <string name="hint_price_infield">price(hrn)</string>
    <string name="hint_description_infield">description(100 characters max)</string>
    <string name="hint_about_me_infield">about me(100 characters max)</string>
    <string name="hint_add">add</string>
    <string name="hint_currency_outfield">" hrn"</string>
    <string name="hint_type_outfield">TYPE</string>
    <string name="hint_outfield_delete_profile">Enter your email and tap \"Delete\" if you want to delete your profile. It\'s impossible to restore the removed profile, but you can create the new one.</string>
    <string name="hint_outfield_clear_browsing_history">Tap \"Clear\" if you want to clear your browsing history and to see all available images again.</string>
    <string name="hint_outfield_forgot_password">Forgot your password?</string>
    <string name="hint_outfield_change_password">To change the password, you have to enter your email to the input field and tap \"Reset\". We will send you an email for password changing.</string>
    <string name="hint_outfield_settings_reset_password">Tap \"Reset\" if you want to change your password. You will be signed out and redirected to the appropriate menu.</string>
    <string name="hint_outfield_agree_to">By signing up, you agree to Beproffer\'s</string>
    <string name="hint_outfield_contact_us_title">Contact us if you have any questions.</string>
    <string name="hint_outfield_contact_us_email">beproffer.llc@gmail.com</string>
    <string name="hint_outfield_use_correct_name_format">Use your first and last name for better representation of your profile.</string>
    <string name="hint_specialist_phone_1">Make sure your phone number is correct. It will be shown to your potential customers.</string>
    <string name="hint_any_strong_password">Make sure your password is strong.</string>
    <string name="hint_any_browsing_history">Browsing history filter id available only for signed up users.</string>
    <string name="hint_any_prohibited_content">Thank you for your help. Qualitative content of Beproffer is one of our main goals.</string>
    <string name="hint_any_image_size">Please use images up to 2 MB to display correctly.</string>
    <string name="hint_any_add_more_personal_info">Add information about you, to make your profile more attractive.</string>
    <string name="hint_specialist_add_more_images">Add more images to your gallery, to find more customers.</string>
    <string name="hint_outfield_confirm">confirm</string>
    <string name="hint_outfield_deny">deny</string>
    <string name="hint_join_us_on_social">Join us in social networks. Share your impressions and wishes. The links to our social networks are in the "info(i)" section.</string>
    <string name="hint_wait_for_confirmation">Wait until the request is confirmed by the specialist. It\'ll appear in your contacts\' list.</string>
    <string name="hint_choose_main_specialization">Please, choose your main specialization.</string>
    <string name="hint_specialist_no_services">You have no services yet. Please tap \"Add\" to publish new one.</string>
    <string name="href_terms_of_service_title_0">Terms of Use</string>
    <string name="href_terms_of_service_title_1">Terms of Use</string>
    <string name="href_terms_of_service_title_2">Terms of Use</string>
    <string name="href_privacy_policy_title_0">Privacy Policy</string>
    <string name="href_privacy_policy_title_1">Privacy Policy</string>
    <string name="href_terms_of_service">https://sites.google.com/view/beproffer/%D0%B3%D0%BB%D0%B0%D0%B2%D0%BD%D0%B0%D1%8F/%D0%BF%D0%BE%D0%BB%D1%8C%D0%B7%D0%BE%D0%B2%D0%B0%D1%82%D0%B5%D0%BB%D1%8C%D1%81%D0%BA%D0%BE%D0%B5-%D1%81%D0%BE%D0%B3%D0%BB%D0%B0%D1%88%D0%B5%D0%BD%D0%B8%D0%B5-beproffer</string>
    <string name="href_privacy_policy" translatable="false">https://sites.google.com/view/beproffer/%D0%B3%D0%BB%D0%B0%D0%B2%D0%BD%D0%B0%D1%8F/%D0%BF%D0%BE%D0%BB%D0%B8%D1%82%D0%B8%D0%BA%D0%B0-%D0%BA%D0%BE%D0%BD%D1%84%D0%B8%D0%B4%D0%B5%D0%BD%D1%86%D0%B8%D0%B0%D0%BB%D1%8C%D0%BD%D0%BE%D1%81%D1%82%D0%B8</string>
    <string name="href_official_site_title" translatable="false">Beproffer.com</string>
    <string name="href_official_site" translatable="false">https://sites.google.com/view/beproffer/%D0%B3%D0%BB%D0%B0%D0%B2%D0%BD%D0%B0%D1%8F</string>
    <string name="href_telegram_chat_customers" translatable="false">https://t.me/beproffer_c</string>
    <string name="href_telegram_chat_specialists" translatable="false">https://t.me/beproffer_s</string>
    <string name="href_viber_chat_customers" translatable="false">https://invite.viber.com/?g2=AQATP13AdMH6M0oUzCUTcg75bBcL4qcWS72dKYPVLOL1fqTuHOB%2FXbsw%2BrHvZSLH</string>
    <string name="href_viber_chat_specialists" translatable="false">https://invite.viber.com/?g2=AQAJVtpDxpdMMEoU3JqJjwNDXuNOM0GnZu%2FDu82uths%2FRhzGMfzEX7OChNW967CM</string>
    <string name="href_facebook_page" translatable="false">fb://page/102981521053885</string>
    <string name="href_instagram_page" translatable="false">https://www.instagram.com/beproffer/</string>
    <string name="package_id_telegram">org.telegram.messenger</string>
    <string name="package_id_viber">com.viber.voip</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_new_customers_title">Requests</string>
    <string name="title_create_an_acc">or create new account</string>
    <string name="title_customer_registration">NEW CUSTOMER</string>
    <string name="title_specialist_registration">NEW SPECIALIST</string>
    <string name="title_add_to_contact">add to contacts</string>
    <string name="title_call">call </string>
    <string name="title_request_already_sent">request sent</string>
    <string name="title_contact_already_available">YOU ALREADY HAVE THIS CONTACT</string>
    <string name="title_max_num_of_contacts">THE MAX NUM OF CONTACTS IS 10</string>
    <string name="title_this_is_your_image">THIS IS YOUR IMAGE</string>
    <string name="title_specialist_type">SPECIALIST</string>
    <string name="title_customer_type">CUSTOMER</string>
    <string name="title_service_type">TYPE</string>
    <string name="title_delete">Delete</string>
    <string name="title_clear">Clear</string>
    <string name="title_reset_password">Reset</string>
    <string name="title_gender_male">Male</string>
    <string name="title_gender_female">Female</string>
    <string name="title_gender_all_genders">Both</string>
    <string name="title_gallery_services">SERVICES</string>
    <string name="title_search">Search</string>
    <string name="title_for">for</string>
    <string name="title_try_again">Try again</string>
    <string name="title_wants_to_contact">Wants to contact you.</string>
    <string name="title_main_specialization">Your main specialization.</string>
    <string name="title_zero" translatable="false">0</string>
    <string name="title_specialization_hai">Hair Services</string>
    <string name="title_specialization_nai">Nails Services</string>
    <string name="title_specialization_mak">Makeup Services</string>
    <string name="title_specialization_tat">Tattoo Services</string>
    <string name="app_availability">The app is available only in Kyiv(Ukraine) for now.</string>
    <string name="register_as_customer">Sign up as a customer</string>
    <string name="register_as_specialist">Sign up as a specialist</string>
    <string name="hair_title_haircut">Haircut</string>
    <string name="hair_title_styling">Styling</string>
    <string name="hair_title_dyeing">Dyeing</string>
    <string name="hair_title_extension">Extension</string>
    <string name="hair_title_braids">Braids, Dreadlocks</string>
    <string name="hair_title_other">Other(hair)</string>
    <string name="nails_title_manicure">Manicure</string>
    <string name="nails_title_pedicure">Pedicure</string>
    <string name="nails_title_extension">Nails Extension</string>
    <string name="nails_title_other">Other(nails)</string>
    <string name="makeup_title_makeup">Makeup</string>
    <string name="makeup_title_eyelash_extension">Eyelash Extension</string>
    <string name="makeup_title_eyebrow_styling">Eyebrow Styling</string>
    <string name="makeup_title_permanent_makeup">Permanent Makeup</string>
    <string name="makeup_title_other">Other(makeup)</string>
    <string name="tattoo_title_tattoo">Tattoo</string>
    <string name="tattoo_title_other">Other(tattoo)</string>
    <string name="confirmed_contact_menu_call">call</string>
    <string name="confirmed_contact_menu_delete">delete</string>
    <string name="confirmed_contact_menu_gallery">gallery</string>
    <string name="menu_vote_prohibited_content">Prohibited content</string>
    <string name="menu_vote_wrong_section">Wrong section</string>
    <string name="iur_requirements">Notice that</string>
    <string name="iur_requirements_1">1. For better performance it\'s better to use images up to 2 MB and 16:9 or 18:9 proportions. Huge or disproportionate images will be cropped or distorted.</string>
    <string name="iur_requirements_2">2. The image must show the service which section it posted in.</string>
    <string name="iur_requirements_3">3. The result of your personal work should be shown on the image. Image should\'t contain any editing, color changing, names, logos, personal information etc.</string>
    <string name="iur_requirements_4">4. Service information should be true and understandable.</string>
    <string name="iur_requirements_5">5. The people depicted on the photo should give their permission to the publication of this photo in Beproffer.</string>
    <string name="iur_requirements_n">More about upload content requirements - </string>
    <string name="toast_select_image">Please select the image.</string>
    <string name="toast_select_type">Please select the service type.</string>
    <string name="toast_enter_name">Please enter your name.</string>
    <string name="toast_enter_phone">Please enter the phone number.</string>
    <string name="toast_select_duration">Please select the session duration.</string>
    <string name="toast_enter_price">Please enter the service price.</string>
    <string name="toast_enter_description">Please enter the service description.</string>
    <string name="toast_determine_gender">Please, determine the gender which the service is relevant for.</string>
    <string name="toast_define_search_request">Please define the search request.</string>
    <string name="toast_define_search_params">All search params must be set.</string>
    <string name="toast_error_has_occurred">Oops. An error has occurred. Please, try again.</string>
    <string name="toast_error_search_request">Something wrong with search parameters. Try to define them once again.</string>
    <string name="toast_error_login">Sign in failed. Please, check your email and the password.</string>
    <string name="toast_error_registration">Registration failed. Please, try again.</string>
    <string name="toast_error_password_confirm_failure">Passwords are not similar.</string>
    <string name="toast_error_user_data_saving_failure">User data saving failed. Please, contact to support.</string>
    <string name="toast_contact_deleted">Contact deleted.</string>
    <string name="toast_browsing_history_cleared">Browsing history was cleared.</string>
</resources>