<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="showProgress"
            type="android.databinding.ObservableBoolean" />

        <variable
            name="fragmentCallback"
            type="com.beproffer.beproffer.presentation.settings.SettingsFragmentCallback" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/settings_clear_history_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/base_margin_small"
            android:background="@drawable/button_background_green_stroke_rectangle"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/base_margin_small"
                android:layout_weight="1"
                android:padding="@dimen/base_margin_small"
                android:text="@string/hint_outfield_clear_browsing_history"
                android:textSize="@dimen/base_text_size_medium" />

            <Button
                android:id="@+id/settings_clear_browsing_history_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/base_margin_small"
                android:background="@drawable/button_background_green_stroke_rectangle"
                android:onClick="@{(view)->fragmentCallback.clearBrowsingHistoryClick()}"
                android:padding="@dimen/base_padding_small"
                android:text="@string/title_clear"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/base_text_size_big"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_reset_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/base_margin_small"
            android:background="@drawable/button_background_green_stroke_rectangle"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_clear_history_layout">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/base_margin_small"
                android:layout_weight="1"
                android:padding="@dimen/base_margin_small"
                android:text="@string/hint_outfield_settings_reset_password"
                android:textSize="@dimen/base_text_size_medium" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/base_margin_small"
                android:background="@drawable/button_background_green_stroke_rectangle"
                android:onClick="@{(view)->fragmentCallback.resetPasswordClick()}"
                android:padding="@dimen/base_padding_small"
                android:text="@string/title_reset_password"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/base_text_size_big"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_delete_profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/base_margin_small"
            android:background="@drawable/button_background_green_stroke_rectangle"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_reset_password_layout">

            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/base_margin_small"
                android:layout_weight="1"
                android:padding="@dimen/base_margin_small"
                android:text="@string/hint_outfield_delete_profile"
                android:textSize="@dimen/base_text_size_medium" />

            <Button
                android:id="@+id/settings_delete_account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/base_margin_small"
                android:background="@drawable/button_background_green_stroke_rectangle"
                android:onClick="@{(view)->fragmentCallback.deleteProfileClick()}"
                android:padding="@dimen/base_padding_small"
                android:text="@string/title_delete"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/base_text_size_big"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/settings_delete_account_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/base_margin_small"
            android:background="@drawable/rectangle_white_background"
            android:hint="@string/email_infield"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:maxLines="1"
            android:padding="@dimen/base_padding_medium"
            android:textSize="@dimen/base_text_size_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_delete_profile_layout"
            tools:ignore="Autofill,MissingConstraints" />

        <ProgressBar
            android:id="@+id/settings_progress_bar"
            android:layout_width="@dimen/profile_image_half"
            android:layout_height="@dimen/profile_image_half"
            android:layout_gravity="center"
            android:theme="@style/Widget.AppCompat.ProgressBar"
            android:visibility="@{showProgress ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>